# porridge

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
crates/benches/: Cargo.toml
crates/benches/benches/: engine.rs
crates/benches/src/: lib.rs
crates/bowl/: Cargo.toml
crates/bowl/src/: bowl.rs  commands.rs  component.rs  declare.rs  entity.rs  lib.rs  query.rs  system.rs  world.rs
crates/macros/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline-macros/: Cargo.toml
crates/pipeline/src/: filter.rs  lib.rs
crates/playground/: Cargo.toml  build.rs
crates/playground/src/: main.rs  replication.rs  tests.rs
crates/playground/src/lang/: entity.rs  facts.rs  mod.rs  schema.rs
crates/playground/src/lang/analysis/: checks.rs  mod.rs  parser.rs
crates/playground/src/lang/entities/: definition.rs  document.rs  import.rs  mod.rs  namespace.rs
crates/playground/src/lang/grammar/: lexer.rs  mod.rs  parser.rs  syntax.llw
crates/playground/src/lang/service/: hover.rs  mod.rs
spec/: access-scheduling.md  async-single-flight.md  bench-reports.md  bound-entity.md  code-review.md  daemon-client.md  declared-outputs.md  derived-from.md  epochs.md  formal-semantics.md  joins.md  language-entities.md  lifecycle-and-ephemeral.md  performance-plan.md  singletons.md  streaming-evaluation.md
spec/ideas/: execution-cycles.md  replication.md
