[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
codespan-reporting = "0.13"
bowl = { path = "../bowl" }
futures = "0.3"
logos = "0.16"
rand = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
lelwel = "0.10"
